--- a/userpatches/linux-rockchip64-dev.config
+++ b/userpatches/linux-rockchip64-dev.config
@@ -2092,7 +2092,7 @@ CONFIG_OF_NUMA=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
-CONFIG_CDROM=n
+CONFIG_CDROM=m
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 CONFIG_ZRAM=m
 CONFIG_ZRAM_DEF_COMP_LZORLE=y
@@ -4442,6 +4442,7 @@ CONFIG_VIDEO_ST_MIPID02=m
 # CONFIG_VIDEO_OV5640 is not set
 # CONFIG_VIDEO_OV5645 is not set
 # CONFIG_VIDEO_OV5647 is not set
+# CONFIG_VIDEO_OV5648 is not set
 # CONFIG_VIDEO_OV6650 is not set
 # CONFIG_VIDEO_OV5670 is not set
 # CONFIG_VIDEO_OV5675 is not set
@@ -4452,6 +4453,7 @@ CONFIG_VIDEO_ST_MIPID02=m
 # CONFIG_VIDEO_OV7670 is not set
 # CONFIG_VIDEO_OV7740 is not set
 # CONFIG_VIDEO_OV8856 is not set
+# CONFIG_VIDEO_OV8865 is not set
 # CONFIG_VIDEO_OV9640 is not set
 # CONFIG_VIDEO_OV9650 is not set
 CONFIG_VIDEO_OV13850=m
@@ -4501,7 +4503,7 @@ CONFIG_VIDEO_OV13850=m
 #
 # SPI helper chips
 #
-CONFIG_VIDEO_GS1662=m
+# CONFIG_VIDEO_GS1662 is not set
 # end of SPI helper chips
 
 #
@@ -4510,32 +4512,32 @@ CONFIG_VIDEO_GS1662=m
 # CONFIG_CXD2880_SPI_DRV is not set
 # end of Media SPI Adapters
 
-CONFIG_MEDIA_TUNER=m
+# CONFIG_MEDIA_TUNER is not set
 
 #
 # Customize TV tuners
 #
-CONFIG_MEDIA_TUNER_SIMPLE=n
+# CONFIG_MEDIA_TUNER_SIMPLE is not set
 # CONFIG_MEDIA_TUNER_TDA18250 is not set
-CONFIG_MEDIA_TUNER_TDA8290=n
-CONFIG_MEDIA_TUNER_TDA827X=n
-CONFIG_MEDIA_TUNER_TDA18271=n
-CONFIG_MEDIA_TUNER_TDA9887=n
-CONFIG_MEDIA_TUNER_TEA5761=n
-CONFIG_MEDIA_TUNER_TEA5767=n
+# CONFIG_MEDIA_TUNER_TDA8290 is not set
+# CONFIG_MEDIA_TUNER_TDA827X is not set
+# CONFIG_MEDIA_TUNER_TDA18271 is not set
+# CONFIG_MEDIA_TUNER_TDA9887 is not set
+# CONFIG_MEDIA_TUNER_TEA5761 is not set
+# CONFIG_MEDIA_TUNER_TEA5767 is not set
 # CONFIG_MEDIA_TUNER_MSI001 is not set
-CONFIG_MEDIA_TUNER_MT20XX=n
+# CONFIG_MEDIA_TUNER_MT20XX is not set
 # CONFIG_MEDIA_TUNER_MT2060 is not set
 # CONFIG_MEDIA_TUNER_MT2063 is not set
 # CONFIG_MEDIA_TUNER_MT2266 is not set
 # CONFIG_MEDIA_TUNER_MT2131 is not set
 # CONFIG_MEDIA_TUNER_QT1010 is not set
-CONFIG_MEDIA_TUNER_XC2028=n
-CONFIG_MEDIA_TUNER_XC5000=n
-CONFIG_MEDIA_TUNER_XC4000=n
+# CONFIG_MEDIA_TUNER_XC2028 is not set
+# CONFIG_MEDIA_TUNER_XC5000 is not set
+# CONFIG_MEDIA_TUNER_XC4000 is not set
 # CONFIG_MEDIA_TUNER_MXL5005S is not set
 # CONFIG_MEDIA_TUNER_MXL5007T is not set
-CONFIG_MEDIA_TUNER_MC44S803=n
+# CONFIG_MEDIA_TUNER_MC44S803 is not set
 # CONFIG_MEDIA_TUNER_MAX2165 is not set
 # CONFIG_MEDIA_TUNER_TDA18218 is not set
 # CONFIG_MEDIA_TUNER_FC0011 is not set
@@ -5221,24 +5223,19 @@ CONFIG_SND_SOC_FSL_MICFIL=m
 #
 # ASoC support for Amlogic platforms
 #
-CONFIG_SND_MESON_AIU=n
-CONFIG_SND_MESON_AXG_FIFO=n
-CONFIG_SND_MESON_AXG_FRDDR=n
-CONFIG_SND_MESON_AXG_TODDR=n
-CONFIG_SND_MESON_AXG_TDM_FORMATTER=n
-CONFIG_SND_MESON_AXG_TDM_INTERFACE=n
-CONFIG_SND_MESON_AXG_TDMIN=n
-CONFIG_SND_MESON_AXG_TDMOUT=n
-CONFIG_SND_MESON_AXG_SOUND_CARD=n
-CONFIG_SND_MESON_AXG_SPDIFOUT=n
-CONFIG_SND_MESON_AXG_SPDIFIN=n
-CONFIG_SND_MESON_AXG_PDM=n
-CONFIG_SND_MESON_CARD_UTILS=n
-CONFIG_SND_MESON_CODEC_GLUE=n
-CONFIG_SND_MESON_GX_SOUND_CARD=n
-CONFIG_SND_MESON_G12A_TOACODEC=n
-CONFIG_SND_MESON_G12A_TOHDMITX=n
-CONFIG_SND_SOC_MESON_T9015=n
+# CONFIG_SND_MESON_AIU is not set
+# CONFIG_SND_MESON_AXG_FRDDR is not set
+# CONFIG_SND_MESON_AXG_TODDR is not set
+# CONFIG_SND_MESON_AXG_TDMIN is not set
+# CONFIG_SND_MESON_AXG_TDMOUT is not set
+# CONFIG_SND_MESON_AXG_SOUND_CARD is not set
+# CONFIG_SND_MESON_AXG_SPDIFOUT is not set
+# CONFIG_SND_MESON_AXG_SPDIFIN is not set
+# CONFIG_SND_MESON_AXG_PDM is not set
+# CONFIG_SND_MESON_GX_SOUND_CARD is not set
+# CONFIG_SND_MESON_G12A_TOACODEC is not set
+# CONFIG_SND_MESON_G12A_TOHDMITX is not set
+# CONFIG_SND_SOC_MESON_T9015 is not set
 # end of ASoC support for Amlogic platforms
 
 CONFIG_SND_SOC_ROCKCHIP=m
@@ -5249,7 +5246,7 @@ CONFIG_SND_SOC_ROCKCHIP_SPDIF=m
 CONFIG_SND_SOC_ROCKCHIP_MAX98090=m
 CONFIG_SND_SOC_ROCKCHIP_RT5645=m
 CONFIG_SND_SOC_ROCKCHIP_RT5651=m
-CONFIG_SND_SOC_RK3288_HDMI_ANALOG=n
+# CONFIG_SND_SOC_RK3288_HDMI_ANALOG is not set
 CONFIG_SND_SOC_RK3399_GRU_SOUND=m
 # CONFIG_SND_SOC_SOF_TOPLEVEL is not set
 
@@ -5261,21 +5258,20 @@ CONFIG_SND_SOC_RK3399_GRU_SOUND=m
 #
 # Allwinner SoC Audio support
 #
-CONFIG_SND_SUN4I_CODEC=n
-CONFIG_SND_SUN8I_CODEC=n
-CONFIG_SND_SUN8I_CODEC_ANALOG=n
-CONFIG_SND_SUN50I_CODEC_ANALOG=n
-CONFIG_SND_SUN4I_I2S=n
-CONFIG_SND_SUN4I_SPDIF=n
-CONFIG_SND_SUN8I_ADDA_PR_REGMAP=n
+# CONFIG_SND_SUN4I_CODEC is not set
+# CONFIG_SND_SUN8I_CODEC is not set
+# CONFIG_SND_SUN8I_CODEC_ANALOG is not set
+# CONFIG_SND_SUN50I_CODEC_ANALOG is not set
+# CONFIG_SND_SUN4I_I2S is not set
+# CONFIG_SND_SUN4I_SPDIF is not set
 # end of Allwinner SoC Audio support
 
-CONFIG_SND_SOC_XILINX_I2S=n
-CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER=n
-CONFIG_SND_SOC_XILINX_SPDIF=n
+# CONFIG_SND_SOC_XILINX_I2S is not set
+# CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER is not set
+# CONFIG_SND_SOC_XILINX_SPDIF is not set
 # CONFIG_SND_SOC_XTFPGA_I2S is not set
 # CONFIG_ZX_TDM is not set
-CONFIG_SND_SOC_I2C_AND_SPI=n
+CONFIG_SND_SOC_I2C_AND_SPI=m
 
 #
 # CODEC drivers
@@ -6396,10 +6392,9 @@ CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_HANTRO=m
 CONFIG_VIDEO_HANTRO_ROCKCHIP=y
-CONFIG_VIDEO_MESON_VDEC=n
+# CONFIG_VIDEO_MESON_VDEC is not set
 CONFIG_VIDEO_ROCKCHIP_VDEC=m
-CONFIG_VIDEO_SUNXI=n
-CONFIG_VIDEO_SUNXI_CEDRUS=n
+# CONFIG_VIDEO_SUNXI is not set
 # CONFIG_VIDEO_ZORAN is not set
 
 #
@@ -6497,21 +6492,8 @@ CONFIG_CLK_RK3308=y
 CONFIG_CLK_RK3328=y
 CONFIG_CLK_RK3368=y
 CONFIG_CLK_RK3399=y
-CONFIG_CLK_SUNXI=n
-CONFIG_CLK_SUNXI_CLOCKS=n
-CONFIG_CLK_SUNXI_PRCM_SUN6I=n
-CONFIG_CLK_SUNXI_PRCM_SUN8I=n
-CONFIG_CLK_SUNXI_PRCM_SUN9I=n
-CONFIG_SUNXI_CCU=n
-CONFIG_SUN50I_A64_CCU=n
-CONFIG_SUN50I_A100_CCU=n
-CONFIG_SUN50I_A100_R_CCU=n
-CONFIG_SUN50I_H6_CCU=n
-CONFIG_SUN50I_H6_R_CCU=n
-CONFIG_SUN8I_A83T_CCU=n
-CONFIG_SUN8I_H3_CCU=n
-CONFIG_SUN8I_DE2_CCU=n
-CONFIG_SUN8I_R_CCU=n
+# CONFIG_CLK_SUNXI is not set
+# CONFIG_SUNXI_CCU is not set
 # CONFIG_HWSPINLOCK is not set
 
 #
